@@ -17,6 +17,7 @@
     "verify:360:adapter:strict:enforced": "node -e \"const {spawnSync}=require('child_process');const env={...process.env,WEFTEND_360_ADAPTER_DOCTOR_STRICT:'1',WEFTEND_360_FAIL_ON_PARTIAL:'1'};const r=spawnSync(process.execPath,['scripts/verify_360.js'],{stdio:'inherit',env});process.exit(r.status||0);\"",
     "verify:360:release": "node -e \"const {spawnSync}=require('child_process');const env={...process.env,WEFTEND_360_ADAPTER_DOCTOR_STRICT:'1',WEFTEND_360_FAIL_ON_PARTIAL:'1',WEFTEND_360_AUDIT_STRICT:'1'};const r=spawnSync(process.execPath,['scripts/verify_360.js'],{stdio:'inherit',env});process.exit(r.status||0);\"",
     "verify:360:release:cleanout": "node -e \"const fs=require('fs');const path=require('path');const {spawnSync}=require('child_process');const out=path.join(process.cwd(),'out','verify_360_release');fs.rmSync(out,{recursive:true,force:true});const env={...process.env,WEFTEND_360_OUT_ROOT:out,WEFTEND_360_ADAPTER_DOCTOR_STRICT:'1',WEFTEND_360_FAIL_ON_PARTIAL:'1',WEFTEND_360_AUDIT_STRICT:'1'};const r=spawnSync(process.execPath,['scripts/verify_360.js'],{stdio:'inherit',env});process.exit(r.status||0);\"",
+    "verify:360:release:managed": "node scripts/verify_360_release_managed.js",
     "verify:360:harness": "node scripts/verify_360_harness.js",
     "verify:360:audit": "node scripts/verify_360_audit.js",
     "verify:360:audit:strict": "node -e \"const {spawnSync}=require('child_process');const env={...process.env,WEFTEND_360_AUDIT_STRICT:'1'};const r=spawnSync(process.execPath,['scripts/verify_360_audit.js'],{stdio:'inherit',env});process.exit(r.status||0);\""
